--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ h3,
 h4 {
   font-family: Yeseva One, serif;
 }
+
 /* header */
 .header {
   background-color: black;
@@ -53,6 +54,7 @@ h4 {
   text-align: right;
   text-decoration-line: underline;
 }
+
 .button-header {
   width: 161px;
   height: 37px;
@@ -84,6 +86,7 @@ h4 {
   text-decoration: none;
   color: white;
 }
+
 .header-navigation-item a:hover {
   color: #e3b873;
   border: none;
@@ -117,6 +120,7 @@ h4 {
   text-transform: uppercase;
   color: #e3b873;
 }
+
 .subtitle {
   font-family: Nunito Sans;
   font-style: normal;
@@ -167,6 +171,7 @@ h4 {
   width: 1440px;
   color: white;
 }
+
 .block-container {
   width: 1263px;
   height: 576px;
@@ -180,6 +185,7 @@ h4 {
   padding-top: 61px;
   margin-top: 0;
 }
+
 .links li {
   display: inline-block;
   margin-right: 61px;
@@ -197,6 +203,7 @@ a {
   color: gray;
   text-decoration: none;
 }
+
 a:hover {
   color: #e3b873;
   border-bottom: 1px #e3b873 solid;
@@ -236,33 +243,23 @@ p {
 }
 
 .block-mini {
-  width: 476px;
-  height: 201px;
+  max-width: 476px;
   margin-top: 0;
   margin-bottom: 55px;
 }
+
+.block-mini-subtitle {
+  display: inline-block;
+  width: 49%;
+  margin-bottom: 40px;
+  margin-top: 0px;
+}
+
 .mini-1 {
-  display: inline-block;
-  margin-right: 63px;
-  margin-bottom: 34px;
-}
-.mini-2 {
-  display: inline-block;
-  padding: 0px 31px 0 31px;
-  margin-bottom: 34px;
-  margin-top: 0;
   position: relative;
-  bottom: 20px;
+  top: 20px;
 }
 
-.mini-3 {
-  display: inline-block;
-  margin-right: 75px;
-}
-
-.mini-4 {
-  display: inline-block;
-}
 
 h3 {
   font-family: Yeseva One;
@@ -275,6 +272,7 @@ h3 {
   margin-bottom: 9px;
   margin-top: 0;
 }
+
 span {
   font-family: Nunito Sans;
   font-style: normal;
@@ -351,6 +349,7 @@ form {
   margin-left: 227px;
   margin-right: 213px;
 }
+
 label {
   font-style: normal;
   font-weight: normal;
@@ -405,13 +404,13 @@ button {
   opacity: 0;
 }
 
-.checkbox-1 + .checkbox-1 {
+.checkbox-1+.checkbox-1 {
   display: inline-flex;
   align-items: center;
   user-select: none;
 }
 
-.checkbox + .checkbox-1::before {
+.checkbox+.checkbox-1::before {
   content: "";
   display: inline-block;
   width: 1em;
@@ -426,7 +425,7 @@ button {
   background-size: 50% 50%;
 }
 
-.checkbox:checked + .checkbox-1::before {
+.checkbox:checked+.checkbox-1::before {
   border: 1px solid #e3b873;
 
   background: url(../images/Vector\ yes.svg) center no-repeat;
@@ -541,6 +540,7 @@ h4 {
 
   background: url(../images/Overhaul.jpg) top center no-repeat;
 }
+
 .block-center-list1 {
   background-color: white;
   width: 335px;
@@ -581,6 +581,7 @@ h4 {
   letter-spacing: 0.5px;
   margin-left: 10px;
 }
+
 /*Part-3*/
 
 .block-text-form {
@@ -629,6 +630,7 @@ h4 {
   align-items: center;
   justify-content: center;
 }
+
 .text-form-right {
   width: 506px;
   height: 509px;
@@ -690,13 +692,13 @@ h4 {
   opacity: 0;
 }
 
-.checkbox-3 + .checkbox-2 {
+.checkbox-3+.checkbox-2 {
   display: inline-flex;
   align-items: center;
   user-select: none;
 }
 
-.checkbox-2 + .checkbox-3::before {
+.checkbox-2+.checkbox-3::before {
   content: "";
   display: inline-block;
   width: 1em;
@@ -711,7 +713,7 @@ h4 {
   background-size: 50% 50%;
 }
 
-.checkbox-2:checked + .checkbox-3::before {
+.checkbox-2:checked+.checkbox-3::before {
   border: 1px solid #e3b873;
 
   background: url(../images/Vector\ yes\ —\ копия.svg) center no-repeat;
@@ -767,6 +769,7 @@ h4 {
   max-width: 1440px;
   max-height: 1109px;
 }
+
 .block-container-4 {
   width: 1263px;
   height: 840px;
@@ -872,6 +875,7 @@ h4 {
   display: flex;
   justify-content: center;
 }
+
 .form-block-5 {
   width: 883px;
   height: 445px;
@@ -916,6 +920,7 @@ h4 {
   margin-left: 181.5px;
   margin-top: 48px;
 }
+
 .email-input-block5 {
   padding-right: 357px;
 }
@@ -926,13 +931,13 @@ h4 {
   opacity: 0;
 }
 
-.checkbox-5 + .checkbox-4 {
+.checkbox-5+.checkbox-4 {
   display: inline-flex;
   align-items: center;
   user-select: none;
 }
 
-.checkbox-4 + .checkbox-5::before {
+.checkbox-4+.checkbox-5::before {
   content: "";
   display: inline-block;
   width: 1em;
@@ -947,7 +952,7 @@ h4 {
   background-size: 50% 50%;
 }
 
-.checkbox-4:checked + .checkbox-5::before {
+.checkbox-4:checked+.checkbox-5::before {
   border: 1px solid #e3b873;
 
   background: url(../images/Vector\ yes\ —\ копия.svg) center no-repeat;
@@ -988,6 +993,7 @@ h4 {
   position: relative;
   z-index: 1;
 }
+
 .dark {
   content: "";
   position: absolute;
@@ -1089,6 +1095,7 @@ h4 {
   text-decoration: none;
   color: white;
 }
+
 .footer-navigation-item a:hover {
   color: #e3b873;
   border: none;
@@ -1096,51 +1103,63 @@ h4 {
 
 /* mobile version */
 @media (max-width: 768px) {
+
   .button-header,
   .header-navigation {
     display: none;
   }
+
   .header-content {
     justify-content: space-between;
     height: 57px;
     padding: 0 18px;
     background-color: #181818;
   }
+
   .phone {
     color: white;
   }
+
   .main-section {
     background: url(../images/Group\ 7.png) 50 0 / auto auto no-repeat;
     height: 476px;
   }
+
   .main-container {
     height: 352px;
     padding: 85px 18px 61px 18px;
   }
+
   .title {
     font-size: 23px;
     line-height: 132.83%;
   }
+
   .rostov {
     font-size: 23px;
     line-height: 132.83%;
   }
+
   .subtitle {
     font-size: 14px;
     line-height: 135.84%;
   }
+
   .main-button1 {
     width: 338px;
     height: 51px;
     margin-bottom: 26px;
   }
+
   .main-button2 {
     width: 338px;
     height: 51px;
   }
+
   .links {
     display: none;
   }
+
   .main-block,
   .block-container,
   .block-text,
@@ -1149,15 +1168,18 @@ h4 {
     margin-left: 0;
     background-color: #181818;
   }
+
   .block-left h2,
   p {
     text-align: center;
     margin-top: 35px;
   }
+
   .block-left-text {
     font-size: 11px;
     line-height: 158.48%;
   }
+
   .mobile-photo2 {
     max-width: 340px;
     min-height: 241px;
@@ -1167,31 +1189,34 @@ h4 {
     background-repeat: no-repeat;
     background-position: 14px 50%, 288px 50%, 50%;
   }
+
   .block-mini {
     margin-left: 17px;
   }
+
   .block-mini-subtitle h3 {
     font-size: 14px;
     line-height: 138.6%;
   }
+
   .block-mini-subtitle span {
     font-size: 11px;
     line-height: 135.84%;
   }
 
-  .mini-2 {
-    padding: 0 31px 0 0;
-    margin-left: 12px;
-  }
+
+
   .swit {
     display: none;
   }
+
   .block-container2 {
     max-width: 375px;
     max-height: 828px;
     margin: 0 auto;
     background-color: #181818;
   }
+
   .block-container {
     padding-bottom: 100px;
   }
@@ -1200,9 +1225,11 @@ h4 {
     width: 340px;
     height: 207px;
   }
+
   .image-2 {
     margin-bottom: 30px;
   }
+
   .text-request {
     width: 340px;
     font-size: 11px;
@@ -1210,37 +1237,42 @@ h4 {
     color: #fff;
     margin: 20px 18px 60px 18px;
   }
+
   .text-request br {
     display: none;
   }
+
   .logo-play img {
     display: none;
   }
+
   .block-container2-form {
     width: 340px;
     display: block;
     margin: 0 18px 0px 18px;
     position: relative;
   }
+
   .block-container2-form label {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 13px;
-  line-height: 21.28px;
-  color: rgba(255, 255, 255, 0.5);
-margin-bottom: 60px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 21.28px;
+    color: rgba(255, 255, 255, 0.5);
+    margin-bottom: 60px;
   }
+
   .block-container2-form label input {
     font-size: 14px;
-  line-height: 138.72%;
-  color: rgba(255, 255, 255, 1);
-  background-color: #181818;
-  width: 340px;
-  padding-bottom: 8px;
-  border-bottom: 1px solid #fff;
-  margin-bottom: 60px;
+    line-height: 138.72%;
+    color: rgba(255, 255, 255, 1);
+    background-color: #181818;
+    width: 340px;
+    padding-bottom: 8px;
+    border-bottom: 1px solid #fff;
+    margin-bottom: 60px;
   }
-  
+
   .block-container2-form button {
     width: 340px;
     position: absolute;
@@ -1248,203 +1280,242 @@ margin-bottom: 60px;
     font-family: "Nunito sans", sans-serif;
     border-radius: 0%;
   }
+
   .block-container2-form p {
     margin-top: -60px;
     text-align: left;
   }
-   .block-container2-form p label {
-     color: #fff;
-     font-size: 14px;
-     margin-bottom: 60px;
-   }
-   .block-container-3 {
-     max-width: 375px;
-     margin-top: 85px;
-     margin-left: 0px;
-   }
-   .subtitle-block-3 {
-     font-size: 22px;
-     line-height: 138.6%;
-   }
-   .block-flex {
-     flex-direction: column;
-     margin-left: 18px;
-   }
-   .block-left-2 {
-     width: 340px;
-     height: 580px;
-     background: url(../images/redecorating\ 2.jpg) no-repeat;
-   }
-   .block-left-list1 {
-     width: 270px;
-     height: 241px;
-     margin-left: 0px;
-     margin-top: 224px;
-     box-shadow: 5px 10px 20px 0px rgba(0, 0, 0, 0.05);
 
-   }
-.block-left-list1 h4 {
-  padding-top: 20px;
-}
-.list-left {
-  line-height: 22.07px;
-}
-.list-item {
-  line-height: 22.07px;
-  padding: 0px;
-}
+  .block-container2-form p label {
+    color: #fff;
+    font-size: 14px;
+    margin-bottom: 60px;
+  }
 
-   .info-price {
-     margin-top: -20px;
-     margin-left: 0px;
-     width: 190px;
-     height: 40px;
-   }
-   .text-price {
-     margin-top: 0px;
-     font-size: 15px;
-     line-height: 20.79px;
-     top: 10px;
-   }
-   
+  .block-container-3 {
+    max-width: 375px;
+    margin-top: 85px;
+    margin-left: 0px;
+  }
 
-   .block-center {
-     width: 340px;
-     height: 580px;
-     background: url(../images/overhaul\ 2.jpg) no-repeat ;
-   }
+  .subtitle-block-3 {
+    font-size: 22px;
+    line-height: 138.6%;
+  }
 
-   .block-center-list1 {
-     width: 270px;
-     height: 241px;
-     margin-left: 0px;
-     margin-top: 224px;
-     box-shadow: 5px 10px 20px 0px rgba(0, 0, 0, 0.05);
+  .block-flex {
+    flex-direction: column;
+    margin-left: 18px;
+  }
 
-   }
-.block-center-list1 h4 {
-  padding-top: 20px;
-}
-.list-center {
-  line-height: 22.07px;
-}
+  .block-left-2 {
+    width: 340px;
+    height: 580px;
+    background: url(../images/redecorating\ 2.jpg) no-repeat;
+  }
 
-.block-right {
-     width: 340px;
-     height: 580px;
-     background: url(../images/disagner\ repair\ 2.jpg) no-repeat ;
-   }
+  .block-left-list1 {
+    width: 270px;
+    height: 241px;
+    margin-left: 0px;
+    margin-top: 224px;
+    box-shadow: 5px 10px 20px 0px rgba(0, 0, 0, 0.05);
 
-   .block-right-list1 {
-     width: 270px;
-     height: 241px;
-     margin-left: 0px;
-     margin-top: 224px;
-     box-shadow: 5px 10px 20px 0px rgba(0, 0, 0, 0.05);
+  }
 
-   }
-.block-right-list1 h4 {
-  padding-top: 20px;
-}
-.list-right {
-  line-height: 22.07px;
-}
-.block-text-form, .logo-pig, .main-block-4, .footer {
-  display: none;
-}
-.mobile-block4 {
-  margin-top: 233px;
-  text-align: center;
-  
-}
-.mobile-h3 {
-  margin-bottom: 20px;
-}
-.mobile2-h3 {
- font-weight: bold;
-}
-.mobile-time {
-     position: relative;
-     z-index: 2;
-     width: 340px;
-     height: 242px;
-     background-image: url(../images/ellipse\ left.svg), url(../images/ellipse\ right.svg), url(../images/time\ mobile.jpg); 
-     background-repeat: no-repeat;
-     background-position: 14px 50%, 288px 50%, 50%;
-     margin-left: 18px;
-     
-}
-.main-block-5 {
-  max-width: 375px;
-  max-height: 875px;
-}
-.form-block-5, .form5 {
-  max-width: 375px;
-  display: block;
-  padding-top: 122px;
- 
-}
-.form-block-5 {
-   margin-top: -391.5px;
-   margin-left: 0px;
-}
-.name-block5, .phone-block5, .email-block5 {
+  .block-left-list1 h4 {
+    padding-top: 20px;
+  }
+
+  .list-left {
+    line-height: 22.07px;
+  }
+
+  .list-item {
+    line-height: 22.07px;
+    padding: 0px;
+  }
+
+  .info-price {
+    margin-top: -20px;
+    margin-left: 0px;
+    width: 190px;
+    height: 40px;
+  }
+
+  .text-price {
+    margin-top: 0px;
+    font-size: 15px;
+    line-height: 20.79px;
+    top: 10px;
+  }
+
+
+  .block-center {
+    width: 340px;
+    height: 580px;
+    background: url(../images/overhaul\ 2.jpg) no-repeat;
+  }
+
+  .block-center-list1 {
+    width: 270px;
+    height: 241px;
+    margin-left: 0px;
+    margin-top: 224px;
+    box-shadow: 5px 10px 20px 0px rgba(0, 0, 0, 0.05);
+
+  }
+
+  .block-center-list1 h4 {
+    padding-top: 20px;
+  }
+
+  .list-center {
+    line-height: 22.07px;
+  }
+
+  .block-right {
+    width: 340px;
+    height: 580px;
+    background: url(../images/disagner\ repair\ 2.jpg) no-repeat;
+  }
+
+  .block-right-list1 {
+    width: 270px;
+    height: 241px;
+    margin-left: 0px;
+    margin-top: 224px;
+    box-shadow: 5px 10px 20px 0px rgba(0, 0, 0, 0.05);
+
+  }
+
+  .block-right-list1 h4 {
+    padding-top: 20px;
+  }
+
+  .list-right {
+    line-height: 22.07px;
+  }
+
+  .block-text-form,
+  .logo-pig,
+  .main-block-4,
+  .footer {
+    display: none;
+  }
+
+  .mobile-block4 {
+    margin-top: 233px;
+    text-align: center;
+
+  }
+
+  .mobile-h3 {
+    margin-bottom: 20px;
+  }
+
+  .mobile2-h3 {
+    font-weight: bold;
+  }
+
+  .mobile-time {
+    position: relative;
+    z-index: 2;
+    width: 340px;
+    height: 242px;
+    background-image: url(../images/ellipse\ left.svg), url(../images/ellipse\ right.svg), url(../images/time\ mobile.jpg);
+    background-repeat: no-repeat;
+    background-position: 14px 50%, 288px 50%, 50%;
+    margin-left: 18px;
+
+  }
+
+  .main-block-5 {
+    max-width: 375px;
+    max-height: 875px;
+  }
+
+  .form-block-5,
+  .form5 {
+    max-width: 375px;
+    display: block;
+    padding-top: 122px;
+
+  }
+
+  .form-block-5 {
+    margin-top: -391.5px;
+    margin-left: 0px;
+  }
+
+  .name-block5,
+  .phone-block5,
+  .email-block5 {
     margin-left: 18px;
     margin-bottom: 60px;
-}
-.input-form-block5 {
-  width: 340px;
-  padding-right: 0px;
-  padding-bottom: 0px;
-}
-.form-block-5:nth-child(4) {
-  margin-bottom: 0px;
-}
-.email-block5 {
-  margin-top: 0px;
-  margin-bottom: 20px;
-}
-.input-text-block5 {
+  }
+
+  .input-form-block5 {
+    width: 340px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+  }
+
+  .form-block-5:nth-child(4) {
+    margin-bottom: 0px;
+  }
+
+  .email-block5 {
+    margin-top: 0px;
+    margin-bottom: 20px;
+  }
+
+  .input-text-block5 {
     margin-top: 0px;
     margin-left: 18px;
     margin-bottom: 0px;
     text-align: left;
-}
+  }
+
   .button-form-block5 {
-   margin: 55px 17px 30px 18px; 
-    height: 51px; 
-    width: 340px; 
+    margin: 55px 17px 30px 18px;
+    height: 51px;
+    width: 340px;
     font-size: 13px;
     line-height: 27px;
     box-shadow: none;
   }
+
   .dark {
     background-color: #131313;
   }
 
   .map img {
-   width: 340px;
-   height: 255px;
+    width: 340px;
+    height: 255px;
     background: url(../images/map\ mobile.jpg)0 0/340px 255px;
     order: 1;
   }
+
   .block5-flex {
     margin-top: 75px;
     display: flex;
     flex-direction: column;
   }
+
   .text-block-5 {
     order: 2;
     margin-top: 40px;
   }
+
   .logo-application {
     order: 3;
   }
 }
 
 
-  @media (min-width: 768px) {
-    .mobile-block4 {
-      display: none;
-    }
+@media (min-width: 768px) {
+  .mobile-block4 {
+    display: none;
   }
+}
