--- a/css/style.css
+++ b/css/style.css
@@ -1121,11 +1121,13 @@ h4 {
   }
 
   .main-section {
-    background: url(../images/Group\ 7.png) 50 0 / auto auto no-repeat;
+    background-image: url(../images/image\ 4.7.jpg) 50 0 / auto auto no-repeat;
     height: 476px;
+    max-width: 375px;
   }
 
   .main-container {
+    max-width: 375px;
     height: 352px;
     padding: 85px 18px 61px 18px;
   }
@@ -1141,6 +1143,7 @@ h4 {
   }
 
   .subtitle {
+    text-align: left;
     font-size: 14px;
     line-height: 135.84%;
   }
@@ -1149,6 +1152,7 @@ h4 {
     width: 338px;
     height: 51px;
     margin-bottom: 26px;
+    margin-right: 0px;
   }
 
   .main-button2 {
@@ -1161,23 +1165,31 @@ h4 {
   }
 
   .main-block,
+  .main-block-2,
   .block-container,
+  .block-container2,
   .block-text,
   .block-left {
-    width: 375px;
+    max-width: 375px;
     margin-left: 0;
     background-color: #181818;
   }
 
-  .block-left h2,
-  p {
+  .block-left h2 {
     text-align: center;
     margin-top: 35px;
+  }
+
+  .subtitle {
+    text-align: left;
+    font-size: 14px;
+    line-height: 135.84%;
   }
 
   .block-left-text {
     font-size: 11px;
     line-height: 158.48%;
+    text-align: center;
   }
 
   .mobile-photo2 {
@@ -1203,8 +1215,6 @@ h4 {
     font-size: 11px;
     line-height: 135.84%;
   }
-
-
 
   .swit {
     display: none;
@@ -1279,6 +1289,9 @@ h4 {
     bottom: -145px;
     font-family: "Nunito sans", sans-serif;
     border-radius: 0%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .block-container2-form p {
@@ -1398,6 +1411,8 @@ h4 {
   }
 
   .block-text-form,
+  .text-form-left,
+  .text-form-right,
   .logo-pig,
   .main-block-4,
   .footer {
@@ -1510,6 +1525,10 @@ h4 {
 
   .logo-application {
     order: 3;
+  }
+
+  .label-form-block5 {
+    margin-right: 0px;
   }
 }
 
